2013-12-17 13:02  uratec

	* mecab/src/param.cpp: Add ctype.h for android-ndk.

2013-12-11 15:46  uratec

	* configure.ac: Update configure.ac for version 1.07.

2013-12-11 15:33  uratec

	* COPYING, NEWS, README, bin/open_jtalk.c, jpcommon/jpcommon.c,
	  jpcommon/jpcommon.h, jpcommon/jpcommon_label.c,
	  jpcommon/jpcommon_node.c,
	  jpcommon/jpcommon_rule_ascii_for_euc_jp.h,
	  jpcommon/jpcommon_rule_ascii_for_shift_jis.h,
	  jpcommon/jpcommon_rule_ascii_for_utf_8.h,
	  jpcommon/jpcommon_rule_euc_jp.h,
	  jpcommon/jpcommon_rule_shift_jis.h,
	  jpcommon/jpcommon_rule_utf_8.h, mecab/COPYING,
	  mecab/src/common.h, mecab/src/iconv_utils.cpp,
	  mecab/src/iconv_utils.h, mecab/src/libmecab.cpp,
	  mecab/src/mecab.cpp, mecab/src/mecab.h, mecab/src/param.cpp,
	  mecab/src/thread.h, mecab/src/utils.cpp, mecab/src/winmain.h,
	  mecab-naist-jdic/COPYING, mecab2njd/mecab2njd.c,
	  mecab2njd/mecab2njd.h, njd/njd.c, njd/njd.h, njd/njd_node.c,
	  njd2jpcommon/njd2jpcommon.c, njd2jpcommon/njd2jpcommon.h,
	  njd2jpcommon/njd2jpcommon_rule_ascii_for_euc_jp.h,
	  njd2jpcommon/njd2jpcommon_rule_ascii_for_shift_jis.h,
	  njd2jpcommon/njd2jpcommon_rule_ascii_for_utf_8.h,
	  njd2jpcommon/njd2jpcommon_rule_euc_jp.h,
	  njd2jpcommon/njd2jpcommon_rule_shift_jis.h,
	  njd2jpcommon/njd2jpcommon_rule_utf_8.h,
	  njd_set_accent_phrase/njd_set_accent_phrase.c,
	  njd_set_accent_phrase/njd_set_accent_phrase.h,
	  njd_set_accent_phrase/njd_set_accent_phrase_rule_ascii_for_euc_jp.h,
	  njd_set_accent_phrase/njd_set_accent_phrase_rule_ascii_for_shift_jis.h,
	  njd_set_accent_phrase/njd_set_accent_phrase_rule_ascii_for_utf_8.h,
	  njd_set_accent_phrase/njd_set_accent_phrase_rule_euc_jp.h,
	  njd_set_accent_phrase/njd_set_accent_phrase_rule_shift_jis.h,
	  njd_set_accent_phrase/njd_set_accent_phrase_rule_utf_8.h,
	  njd_set_accent_type/njd_set_accent_type.c,
	  njd_set_accent_type/njd_set_accent_type.h,
	  njd_set_accent_type/njd_set_accent_type_rule_ascii_for_euc_jp.h,